--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,9 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 invoiceapp.mail.from=invoices@invoiceapp.local
 invoiceapp.mail.from-name=InvoiceApp Bot
+
+invoiceapp.mail.from=no-reply@yourdomain.com
+
+# schedule for overdue reminders (here: daily at 1 AM)
+invoiceapp.overdue.cron=* * 1 * * *
+
