--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,4 @@ invoiceapp.mail.from=no-reply@yourdomain.com
 # schedule for overdue reminders (here: daily at 1 AM)
 invoiceapp.overdue.cron=* * 1 * * *
 
+spring.main.banner-mode=off
