--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=invoice-management
-spring.datasource.url=jdbc:mysql://localhost:3306/invoice_db?allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.username=springstudent
-spring.datasource.password=springstudent
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -9,15 +9,15 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 
 spring.mail.host=sandbox.smtp.mailtrap.io
-spring.mail.port=2525
-spring.mail.username=f35719b548d2b8
-spring.mail.password=aec25e128198cb
+spring.mail.port=
+spring.mail.username=
+spring.mail.password=
 spring.mail.protocol=smtp
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-invoiceapp.mail.from=invoices@invoiceapp.local
-invoiceapp.mail.from-name=InvoiceApp Bot
+invoiceapp.mail.from=
+invoiceapp.mail.from-name=
 
 # schedule for overdue reminders (here: daily at 1 AM)
 invoiceapp.overdue.cron=0 0 1 * * *
